@@ -632,15 +632,7 @@ class Main(QtWidgets.QWidget):
         if not self.input_video or not self.initialized or self.loading_video:
             return
 
-        # self.container.show_splash()
-        # self.setWindowFlags(QtCore.Qt.WindowStaysOnBottomHint)
-        # import time
-        # time.sleep(10)
-
-        label = QtWidgets.QLabel(self)
-        label.setText("""<font size=65><b>Running AutoCrop</b></font>""")
-        label.setWindowFlags(QtCore.Qt.SplashScreen | QtCore.Qt.FramelessWindowHint)
-        label.show()
+        self.setCursor(Qt.WaitCursor)
         self.container.app.processEvents()
 
         start_pos = self.start_time or self.initial_duration // 10
@@ -659,7 +651,7 @@ class Main(QtWidgets.QWidget):
 
         if t + b > self.video_height * 0.9 or r + l > self.video_width * 0.9:
             logger.warning(f"Autocrop tried to crop too much (left {l}, top {t}, right {r}, bottom {b}), ignoring")
-            label.close()
+            self.unsetCursor()
             return
 
         # Hack to stop thumb gen
@@ -669,8 +661,6 @@ class Main(QtWidgets.QWidget):
         self.widgets.crop.right.setText(str(r))
         self.loading_video = False
         self.widgets.crop.bottom.setText(str(b))
-        # self.container.close_splash()
-        label.close()
 
     def build_crop(self):
         try:
@@ -846,15 +836,20 @@ class Main(QtWidgets.QWidget):
     @reusables.log_exception("fastflix", show_traceback=False)
     def update_video_info(self):
         self.loading_video = True
+        self.setCursor(Qt.WaitCursor)
         splash_label = QtWidgets.QLabel(self)
         splash_label.setText("""<font size=65><b>Loading Video Details...</b></font>""")
         splash_label.setWindowFlags(QtCore.Qt.SplashScreen | QtCore.Qt.FramelessWindowHint)
         splash_label.show()
         self.container.app.processEvents()
 
+        self.temp_dir.cleanup()
+        self.temp_dir = tempfile.TemporaryDirectory(prefix="temp_", dir=self.path.work)
+        self.path.temp_dir = self.temp_dir.name
+
         try:
             self.streams, self.format_info = self.flix.parse(
-                self.input_video, work_dir=self.path.work, extract_covers=True
+                self.input_video, temp_dir=self.path.temp_dir, extract_covers=True
             )
         except FlixError:
             error_message(f"Not a video file<br>{self.input_video}")
@@ -872,6 +867,7 @@ class Main(QtWidgets.QWidget):
             self.widgets.preview.setText("No Video File")
             self.page_update()
             splash_label.close()
+            self.unsetCursor()
             return
 
         self.side_data = self.flix.parse_hdr_details(self.input_video)
@@ -900,6 +896,7 @@ class Main(QtWidgets.QWidget):
             self.widgets.preview.setText("No Video File")
             self.page_update()
             splash_label.close()
+            self.unsetCursor()
             return
 
         self.widgets.crop.top.setText("0")
@@ -962,6 +959,7 @@ class Main(QtWidgets.QWidget):
         self.widgets.convert_button.setDisabled(False)
         self.widgets.convert_button.setStyleSheet("background-color:green;")
         self.loading_video = False
+        self.unsetCursor()
         splash_label.close()
 
     @property
@@ -1029,6 +1027,8 @@ class Main(QtWidgets.QWidget):
         if not self.input_video or self.loading_video:
             return
 
+        self.setCursor(Qt.WaitCursor)
+
         if settings.pix_fmt == "yuv420p10le" and self.pix_fmt in ("yuv420p10le", "yuv420p12le"):
             settings.disable_hdr = True
         filters = helpers.generate_filters(custom_filters="scale='min(320\\,iw):-1'", **settings)
@@ -1051,6 +1051,7 @@ class Main(QtWidgets.QWidget):
 
     @reusables.log_exception("fastflix", show_traceback=False)
     def thumbnail_generated(self, success=False):
+        self.unsetCursor()
         if not success or not self.thumb_file.exists():
             self.widgets.preview.setText("Error Updating Thumbnail")
             return
@@ -1144,7 +1145,7 @@ class Main(QtWidgets.QWidget):
             self.status_queue.put("exit")
         except KeyboardInterrupt:
             if not no_cleanup:
-                self.temp_dir.cleanup()
+                self.path.temp_dir.cleanup()
             self.notifier.terminate()
             super().close()
             self.container.close()
@@ -1313,3 +1314,53 @@ class Notifier(QtCore.QThread):
             elif status == "exit":
                 self.app.close_event.emit()
                 return
+
+
+import math, sys
+from qtpy.QtCore import Qt, QTimer
+from qtpy.QtGui import *
+from qtpy.QtWidgets import *
+
+
+class Overlay(QWidget):
+    def __init__(self, parent=None):
+
+        QWidget.__init__(self, parent)
+        palette = QPalette(self.palette())
+        palette.setColor(palette.Background, Qt.transparent)
+        self.setPalette(palette)
+
+    def paintEvent(self, event):
+
+        painter = QPainter()
+        painter.begin(self)
+        painter.setRenderHint(QPainter.Antialiasing)
+        painter.fillRect(event.rect(), QBrush(QColor(255, 255, 255, 127)))
+        painter.setPen(QPen(Qt.NoPen))
+
+        for i in range(6):
+            if (self.counter / 5) % 6 == i:
+                painter.setBrush(QBrush(QColor(127 + (self.counter % 5) * 32, 127, 127)))
+            else:
+                painter.setBrush(QBrush(QColor(127, 127, 127)))
+            painter.drawEllipse(
+                self.width() / 2 + 30 * math.cos(2 * math.pi * i / 6.0) - 10,
+                self.height() / 2 + 30 * math.sin(2 * math.pi * i / 6.0) - 10,
+                20,
+                20,
+            )
+
+        painter.end()
+
+    def showEvent(self, event):
+
+        self.timer = self.startTimer(50)
+        self.counter = 0
+
+    def timerEvent(self, event):
+
+        self.counter += 1
+        self.update()
+        if self.counter == 60:
+            self.killTimer(self.timer)
+            self.hide()
