@@ -6,6 +6,7 @@
 * Adding x265 params hdr10, hdr10-opt, aq-mode and repeat-headers
 * Adding basic splash info for some events
 * Changing that autocrop will test two spots if possible (thanks to HannesJo0139)
+* Changing covers generated in their own temp directory
 * Fixing #103 x265-params were being pre-pended with an extra ":" (thanks to Zeid164)
 * Fixing #101 FFmpeg status codes now taken into account for errors
 
